--- a/services/config-server/src/main/resources/configurations/application.yml
+++ b/services/config-server/src/main/resources/configurations/application.yml
@@ -1,6 +1,6 @@
 eureka:
   instance:
-    hostname:
+    hostname: localhost
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
