--- a/services/config-server/src/main/resources/configurations/product-service.yml
+++ b/services/config-server/src/main/resources/configurations/product-service.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/product
     username: postgres
-    password: 0102
-    driver-class-name: ord.postgresql.Driver
+    password: "0102"
+    driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
       ddl-auto: validate
@@ -15,6 +15,6 @@ spring:
     baseline-description: "init"
     baseline-version: 0
     user: ${spring.datasource.username}
-    password: ${spring.datasource.username}
+    password: ${spring.datasource.password}
 server:
   port: 8050
