--- a/services/customer/src/main/resources/application.yml
+++ b/services/customer/src/main/resources/application.yml
@@ -2,5 +2,5 @@
     application:
       name: customer
     config:
-      import: optional:configserver://http:localhost:8888
+      import: optional:configserver:http://localhost:8888
 
