add kafka producer in order service

--- a/services/config-server/src/main/resources/configurations/order-service.yml
+++ b/services/config-server/src/main/resources/configurations/order-service.yml
@@ -16,6 +16,11 @@ application:
     customer-url: http://localhost:8222/api/v1/customers
     product-url: http://localhost:8222/api/v1/products
     order-url: http://localhost:8222/api/v1/orders
-
-
+kafka:
+  producer:
+    bootstrap-servers: localhost:9092
+    key-serializer: org.apache.kafka.common.StringSerializer
+    value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    properties:
+      spring.json.type.mapping: orderConfirmation:com.pavils.ecommerce.kafka.OrderConfirmation
 
