--- a/services/config-server/src/main/resources/configurations/customer-service.yml
+++ b/services/config-server/src/main/resources/configurations/customer-service.yml
@@ -1,11 +1,11 @@
-  spring:
-    data:
-      mongodb:
-        username: pavils
-        password: 0102
-        host: localhost
-        port: 27017
-        database: customer
-        authentication-database: admin
-  server:
-    port: 8090
+spring:
+  data:
+    mongodb:
+      username: pavils
+      password: pavils
+      host: localhost
+      port: 27017
+      database: customer
+      authentication-database: admin
+server:
+  port: 8090
