--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,27 +33,24 @@ services:
     image: mongo
     container_name: mongo_db
     ports:
-      - "27017:27017"
+      - 27017:27017
     volumes:
       - mongo:/data
     environment:
       - MONGO_INITDB_ROOT_USERNAME=pavils
-      - MONGO_INITDB_ROOT_PASSWORD=0102
-    networks:
-      microservices-net:
-        aliases:
-          - mongo
+      - MONGO_INITDB_ROOT_PASSWORD=pavils
 
   mongo-express:
     image: mongo-express
     container_name: mongo_express
-    restart: always
+    restart: unless-stopped
     ports:
       - "8081:8081"
     environment:
       - ME_CONFIG_MONGODB_ADMINUSERNAME=pavils
-      - ME_CONFIG_MONGODB_ADMINPASSWORD=0102
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=pavils
       - ME_CONFIG_MONGODB_SERVER=mongodb
+      - ME_CONFIG_BASICAUTH=false
 
   mail-dev:
     container_name: ms-mail-dev
