--- a/services/config-server/src/main/resources/configurations/notification-service.yaml
+++ b/services/config-server/src/main/resources/configurations/notification-service.yaml
@@ -10,13 +10,13 @@ spring:
   kafka:
     consumer:
       bootstrap-servers: localhost:9092
-      group-id: paymentGroup, orderGroup
+      group-id: paymentGroup,orderGroup
       auto-offset-reset: earliest
-      key-deserializer: org.apache.kafka.common.StringSerializer
-      value-deserializer: org.springframework.kafka.support.serializer.JsonSerializer
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
         spring.json.trusted.packages: '*'
-        spring.json.type.mapping: orderConfirmation:com.pavils.ecommerce.kafka.OrderConfirmation,paymentConfirmation:com.pavils.ecommerce.kafka.PaymentConfirmation
+        spring.json.type.mapping: orderConfirmation:com.pavils.ecommerce.kafka.order.OrderConfirmation,paymentConfirmation:com.pavils.ecommerce.kafka.payment.PaymentConfirmation
   mail:
     host: localhost
     port: 1025
