--- a/services/config-server/src/main/resources/configurations/order-service.yml
+++ b/services/config-server/src/main/resources/configurations/order-service.yml
@@ -6,7 +6,7 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 server:
@@ -16,10 +16,11 @@ application:
     customer-url: http://localhost:8222/api/v1/customers
     product-url: http://localhost:8222/api/v1/products
     order-url: http://localhost:8222/api/v1/orders
+    payment-url: http://localhost:8222/api/v1/payments
 kafka:
   producer:
     bootstrap-servers: localhost:9092
-    key-serializer: org.apache.kafka.common.StringSerializer
+    key-serializer: org.apache.kafka.common.serialization.StringSerializer
     value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
     properties:
       spring.json.type.mapping: orderConfirmation:com.pavils.ecommerce.kafka.OrderConfirmation
