--- a/services/customer/src/main/resources/application.yml
+++ b/services/customer/src/main/resources/application.yml
@@ -1,6 +1,6 @@
   spring:
     application:
-      name: customer
+      name: customer-service
     config:
       import: optional:configserver:http://localhost:8888
 
